# doorlock

./: LICENSE  README.md
api/: Cargo.toml  Dockerfile  run.sh
api/src/: api.rs  main.rs  server.rs
api/templates/: action.html  index.html
client/: Cargo.toml
client/src/: device.rs
console/: Cargo.toml
console/src/: main.rs
firmware/: Cargo.toml  README.adoc  rust-toolchain.toml
firmware/application/: Cargo.toml  memory.x
firmware/application/src/: lock.rs  main.rs  motor.rs
firmware/bootloader/: Cargo.toml  memory.x
firmware/bootloader/src/: main.rs
gateway/: Cargo.toml  rust-toolchain.toml
gateway/.cargo/: config.toml
gateway/src/: device.rs  gateway.rs  main.rs
